More LESS cleanup. Modified @grid-float-breakpoint to get rid of navbar collapse and deleted custom CSS that disabled navbar collapse. Added a class to the competition name menu item, and added some CSS to it, to prevent the competition name and cogs icon from overlapping weirdly.

--- a/css/ccm-variables.import.less
+++ b/css/ccm-variables.import.less
@@ -2,6 +2,9 @@
 // Bootstrap overrides
 ////////////////////////////////////////////////////////////////////////////////
 
+// We want to prevent the navbar from collapsing
+@grid-float-breakpoint: 0px;
+
 // Bootstraps default table-bg-hover is too similar to the darker
 // table stripe.
 @table-bg-hover: #eee;
