--- a/css/layout.import.less
+++ b/css/layout.import.less
@@ -187,29 +187,13 @@ p.navbar-brand > img {
   }
 }
 
-/* Prevent navbar collapse entirely */
-@media (max-width: 768px) {
-  .navbar-nav {
-    float: left;
-    margin: 0;
-  }
-  .navbar-nav.navbar-right {
-    float: right;
-  }
+li.competition a {
+  width: 175px; // 215 to put cogs on new line
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 
-  .navbar-nav > li {
-    float: left;
-  }
-
-  .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-
-  /* hacking to remove extra pixels that we don't want when tiny */
-  .navbar-collapse {
-    border: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+  @media (min-width: @screen-sm-min) {
+    width: auto;
   }
 }
